--- a/package.json
+++ b/package.json
@@ -10,5 +10,13 @@
     "javascript"
   ],
   "author": "Jorge Sanvicente Lugo",
-  "license": "(MIT)"
+  "license": "(MIT)",
+  "devDependencies": {
+    "@babel/core": "^7.19.0",
+    "babel-loader": "^8.2.5",
+    "html-webpack-plugin": "^5.5.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.0"
+  }
 }
